aight I dove in a bit, fixed neg margin top on mobile, heightened heroContainer, and fux w buttons in slider

--- a/client/styles/mixins.import.less
+++ b/client/styles/mixins.import.less
@@ -14,8 +14,10 @@
 
 @white : #E6DDDE;
 @brand : #916A70;
+// @brand : #F79083;
+// @brand: #F1693D;
 @blue : #0B337D;
-@accent : spin(@brand, 180);
+@accent : spin(@brand, 171);
 @black : black;
 
 @grey : #8e8e8e;
