--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -71,8 +71,6 @@
   padding: 20px;
 }
 
-.slideInfo {
-}
 .slideDesc {font-size: 18px;}
 .slideAction {margin-top:40px}
 
